app/assets/stylesheets/layout/_layout.css.scss
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  > footer { flex: 1; }
}

@mixin spacing($props, $times: 1) {
  @each $prop in $props {
    @include rem($prop, $times * 1.5rem);
  }
}

// Horizontal
.l-x    {
                                @include rem(padding-left padding-right,  1.5rem);
  @include media-upto($bp-m) {  @include rem(padding-left padding-right,  1.1rem); }
}

// Vertical
.l-p    { @include spacing(padding-top padding-bottom, 1.0); }
.l-pp   { @include spacing(padding-top padding-bottom, 1.5); }
.l-ppp  { @include spacing(padding-top padding-bottom, 2.0); }
.l-m    { @include spacing(margin-top margin-bottom, 1.0); }
.l-mm   { @include spacing(margin-top margin-bottom, 1.5); }
.l-mmm  { @include spacing(margin-top margin-bottom, 2.0); }

// General rules.
.l-row  { @include row; }
.l-wrap { @include outer-container; }

.l-block {
  @extend .l-x;
  > *  { @extend .l-wrap; }
}
.l-container {
  @extend .l-block;
  @extend .l-p;
}

.l-x.l-wrap {
  @include box-sizing(content-box);
}

.l-line-t { border-top: divider(); }
.l-line-b { border-bottom: divider(); }
.l-line   { @extend .l-line-t; @extend .l-line-b; }

.l-col {
  @include centered;
}
.l-reading  { @include rem(max-width, $width-reading); }
.l-single   { @include rem(max-width, $width-single); }
.l-single-l { @include rem(max-width, $width-single-larger); }
.l-col-single   { @extend .l-col; @extend .l-single; }
.l-col-reading  { @extend .l-col; @extend .l-reading; }

.l-cols > * {
 @include spacing(margin-top);
}

.l-stack-lined > *  {
  @include spacing(padding-top padding-bottom, .75);
  // + * { border-top: divider(); }
}

.l-stack-plain > * {
  @include spacing(margin-bottom, 1.5);
}

.l-flexcenter {
  display: flex;
  align-items: center;
  > * { flex: 1; margin: auto; }
}

.l-fl-l { float: left   !important; }
.l-fl-r { float: right  !important; }
.l-cl-b { clear: both   !important; }
.l-cl-l { clear: left   !important; }
.l-cl-r { clear: right  !important; }

main.with-sidebar { @include spacing(padding-top); }
main.no-sidebar   { @include spacing(padding-top padding-bottom, 1.5); }

.sidebar-button {
  @include prefixer(apperance, none, webkit moz spec);
  border: none;
  border-radius: 4px;
  background-color: black;
  background-image: image-url('ui/arrow-toggle-sidebar.svg');
  width: 2.5em;
  height: 2.5em;
  background-size: 1.5em auto;
  background-repeat: no-repeat;
  background-position: center 55%;
  transition: all 150ms linear;
  &.is-expanded {
    transform: rotate(180deg);
  }
  @include hover {
    background-color: $c-blue;
    outline: none;
  }
}

@include media-upto($bp-m) {
  .sidebar-button {
    position: absolute;
    top: 0; right: 0;
  }
  .sidebar-content {
    display: none;
    @include spacing(margin-bottom padding-top padding-bottom);
    border-bottom: divider();
    border-top: divider();
  }
  .sidebar-content {
    .navgroup { @include row; }
    .navgroup-title,
    .navgroup-items { @include span-columns(6); }
    .navgroup-title { padding-top: .3em; }
  }
}

@include media-from($bp-m) {
  .sidebar {
    float: left;
    width: $sidebar-width;
    @include spacing(padding-bottom, 1.5);
  }
  .sidebar-content {
    display: block !important;
  }
  .sidebar-button {
    display: none;
  }
  .with-sidebar #content {
    overflow: hidden;
  }
  main.with-sidebar .page-header {
    margin-left: $sidebar-width;
  }

}

.main-header {
  @include spacing(margin-top, .75);
  @include spacing(margin-bottom, 1.25);
  position: relative;
}

.sidebar {
  @include spacing(margin-top, 1.25); 
}

//
// Full Grid
//

// NOT Breakpoint-Specific
@include make-cols();
@include make-gaps();
@include make-stacked();

// Breakpoint-specific
@each $bp in $bps {
  $class: nth($bp, 1);
  $value: nth($bp, 2);
  @include media-from($value) {
    @include make-cols($class);
    @include make-gaps($class);
  }
  @include media-upto($value) {
    @include make-stacked($class);
  }
}

.max-8 { max-width: flex-grid(8) / 100% * $max-width; }
.max-6 { max-width: flex-grid(6) / 100% * $max-width; }

